src/gen/y.output
Terminals which are not used

   PP_NEWLINE
   PP_ERROR
   PP_WARNING
   PP_PRAGMA
   NAME_MACRO
   NAME_STRUCT
   NAME_UNION
   NAME_ENUM


State 27 conflicts: 1 shift/reduce
State 525 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 preprocessor_content: LITERAL_INT
    2                     | LITERAL_FLOAT
    3                     | LITERAL_CHAR
    4                     | LITERAL_STRING
    5                     | LITERAL_ENUM
    6                     | PP_STRING
    7                     | PP_CONTENT

    8 preprocessor: PP preprocessor_conditional '\n'
    9             | PP preprocessor_undefine '\n'
   10             | PP preprocessor_define '\n'
   11             | PP preprocessor_include '\n'
   12             | PP preprocessor_line '\n'

   13 preprocessor_conditional: PP_IF preprocessor_content
   14                         | PP_ELIF preprocessor_content
   15                         | PP_ELSE
   16                         | PP_ENDIF
   17                         | PP_IFDEF PP_SPACE IDENTIFIER
   18                         | PP_IFNDEF PP_SPACE IDENTIFIER

   19 preprocessor_undefine: PP_UNDEF PP_SPACE IDENTIFIER

   20 preprocessor_define: PP_DEFINE PP_SPACE IDENTIFIER
   21                    | PP_DEFINE PP_SPACE IDENTIFIER PP_SPACE
   22                    | PP_DEFINE PP_SPACE IDENTIFIER PP_SPACE preprocessor_content
   23                    | PP_DEFINE PP_SPACE IDENTIFIER '(' preprocessor_define_args ')'
   24                    | PP_DEFINE PP_SPACE IDENTIFIER '(' preprocessor_define_args ')' preprocessor_content

   25 preprocessor_define_args: IDENTIFIER
   26                         | preprocessor_define_args ',' IDENTIFIER

   27 preprocessor_include: PP_INCLUDE PP_STRING
   28                     | PP_INCLUDE LITERAL_STRING
   29                     | PP_INCLUDE PP_SPACE PP_STRING
   30                     | PP_INCLUDE PP_SPACE LITERAL_STRING

   31 preprocessor_line: PP_LINE
   32                  | PP_LINE PP_SPACE
   33                  | PP_LINE PP_SPACE constant
   34                  | PP_LINE PP_SPACE constant PP_SPACE PP_STRING
   35                  | PP_LINE PP_SPACE constant PP_SPACE LITERAL_STRING

   36 constant: LITERAL_INT
   37         | LITERAL_CHAR
   38         | LITERAL_FLOAT
   39         | LITERAL_ENUM

   40 string: LITERAL_STRING

   41 expression_primary: IDENTIFIER
   42                   | constant
   43                   | string
   44                   | '(' expression ')'
   45                   | generic_selection

   46 expression_postfix: expression_primary
   47                   | expression_postfix '[' expression ']'
   48                   | expression_postfix '(' ')'
   49                   | expression_postfix '(' argument_expression_list ')'
   50                   | expression_postfix '.' IDENTIFIER
   51                   | expression_postfix OP_PTR IDENTIFIER
   52                   | expression_postfix OP_INC
   53                   | expression_postfix OP_DEC
   54                   | '(' type_name ')' '{' initializer_list '}'
   55                   | '(' type_name ')' '{' initializer_list ',' '}'

   56 argument_expression_list: expression_assignment
   57                         | argument_expression_list ',' expression_assignment

   58 expression_unary: expression_postfix
   59                 | OP_INC expression_unary
   60                 | OP_DEC expression_unary
   61                 | unary_operator expression_cast
   62                 | SIZEOF expression_unary
   63                 | SIZEOF '(' type_name ')'
   64                 | ALIGNOF '(' type_name ')'

   65 unary_operator: '&'
   66               | '*'
   67               | '+'
   68               | '-'
   69               | '~'
   70               | '!'

   71 expression_cast: expression_unary
   72                | '(' type_name ')' expression_cast

   73 expression_multiplicative: expression_cast
   74                          | expression_multiplicative '*' expression_cast
   75                          | expression_multiplicative '/' expression_cast
   76                          | expression_multiplicative '%' expression_cast

   77 expression_additive: expression_multiplicative
   78                    | expression_additive '+' expression_multiplicative
   79                    | expression_additive '-' expression_multiplicative

   80 expression_shift: expression_additive
   81                 | expression_shift OP_BITLEFT expression_additive
   82                 | expression_shift OP_BITRIGHT expression_additive

   83 expression_relational: expression_shift
   84                      | expression_relational OP_LT expression_shift
   85                      | expression_relational OP_GT expression_shift
   86                      | expression_relational OP_LTE expression_shift
   87                      | expression_relational OP_GTE expression_shift

   88 expression_equality: expression_relational
   89                    | expression_equality OP_EQ expression_relational
   90                    | expression_equality OP_NEQ expression_relational

   91 expression_bitwise_and: expression_equality
   92                       | expression_bitwise_and '&' expression_equality

   93 expression_bitwise_xor: expression_bitwise_and
   94                       | expression_bitwise_xor '^' expression_bitwise_and

   95 expression_bitwise_or: expression_bitwise_xor
   96                      | expression_bitwise_or '|' expression_bitwise_xor

   97 expression_logical_and: expression_bitwise_or
   98                       | expression_logical_and OP_AND expression_bitwise_or

   99 expression_logical_or: expression_logical_and
  100                      | expression_logical_or OP_OR expression_logical_and

  101 expression_ternary: expression_logical_or
  102                   | expression_logical_or '?' expression ':' expression_ternary

  103 expression_assignment: expression_ternary
  104                      | expression_unary assignment_operator expression_assignment

  105 assignment_operator: '='
  106                    | OP_ASSIGN_MUL
  107                    | OP_ASSIGN_DIV
  108                    | OP_ASSIGN_MOD
  109                    | OP_ASSIGN_ADD
  110                    | OP_ASSIGN_SUB
  111                    | OP_ASSIGN_BITLEFT
  112                    | OP_ASSIGN_BITRIGHT
  113                    | OP_ASSIGN_BITAND
  114                    | OP_ASSIGN_BITXOR
  115                    | OP_ASSIGN_BITOR

  116 expression: expression_assignment
  117           | expression ',' expression_assignment

  118 expression_constant: expression_ternary

  119 storage_class_specifier: EXTERN
  120                        | STATIC
  121                        | THREAD_LOCAL
  122                        | AUTO
  123                        | REGISTER

  124 type_specifier: VOID
  125               | CHAR
  126               | SHORT
  127               | INT
  128               | LONG
  129               | FLOAT
  130               | DOUBLE
  131               | SIGNED
  132               | UNSIGNED
  133               | BOOL
  134               | COMPLEX
  135               | IMAGINARY
  136               | atomic_type_specifier
  137               | struct_specifier
  138               | union_specifier
  139               | enum_specifier
  140               | NAME_TYPEDEF

  141 specifier_qualifier_list: type_specifier specifier_qualifier_list
  142                         | type_specifier
  143                         | type_qualifier specifier_qualifier_list
  144                         | type_qualifier

  145 struct_specifier: STRUCT '{' struct_declaration_list '}'
  146                 | STRUCT IDENTIFIER '{' struct_declaration_list '}'
  147                 | STRUCT IDENTIFIER

  148 struct_declaration_list: struct_declaration
  149                        | struct_declaration_list struct_declaration

  150 struct_declaration: specifier_qualifier_list ';'
  151                   | specifier_qualifier_list struct_declarator_list ';'
  152                   | static_assert_declaration

  153 struct_declarator_list: struct_declarator
  154                       | struct_declarator_list ',' struct_declarator

  155 struct_declarator: ':' expression_constant
  156                  | declarator ':' expression_constant
  157                  | declarator

  158 union_specifier: UNION '{' struct_declaration_list '}'
  159                | UNION IDENTIFIER '{' struct_declaration_list '}'
  160                | UNION IDENTIFIER

  161 enum_specifier: ENUM '{' enumerator_list '}'
  162               | ENUM '{' enumerator_list ',' '}'
  163               | ENUM IDENTIFIER '{' enumerator_list '}'
  164               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  165               | ENUM IDENTIFIER

  166 enumerator_list: enumerator
  167                | enumerator_list ',' enumerator

  168 enumerator: IDENTIFIER '=' expression_constant
  169           | IDENTIFIER

  170 generic_selection: GENERIC '(' expression_assignment ',' generic_assoc_list ')'

  171 generic_assoc_list: generic_association
  172                   | generic_assoc_list ',' generic_association

  173 generic_association: type_name ':' expression_assignment
  174                    | DEFAULT ':' expression_assignment

  175 atomic_type_specifier: ATOMIC '(' type_name ')'

  176 function_specifier: INLINE
  177                   | NORETURN

  178 alignment_specifier: ALIGNAS '(' type_name ')'
  179                    | ALIGNAS '(' expression_constant ')'

  180 parameter_type_list: parameter_list ',' ELLIPSIS
  181                    | parameter_list

  182 parameter_list: parameter_declaration
  183               | parameter_list ',' parameter_declaration

  184 parameter_declaration: declaration_specifiers declarator
  185                      | declaration_specifiers abstract_declarator
  186                      | declaration_specifiers

  187 identifier_list: IDENTIFIER
  188                | identifier_list ',' IDENTIFIER

  189 type_name: specifier_qualifier_list abstract_declarator
  190          | specifier_qualifier_list

  191 initializer_list: designation initializer
  192                 | initializer
  193                 | initializer_list ',' designation initializer
  194                 | initializer_list ',' initializer

  195 initializer: '{' initializer_list '}'
  196            | '{' initializer_list ',' '}'
  197            | expression_assignment

  198 designation: designator_list '='

  199 designator_list: designator
  200                | designator_list designator

  201 designator: '[' expression_constant ']'
  202           | '.' IDENTIFIER

  203 static_assert_declaration: STATIC_ASSERT '(' expression_constant ',' LITERAL_STRING ')' ';'

  204 labeled_statement: IDENTIFIER ':' statement
  205                  | CASE expression_constant ':' statement
  206                  | DEFAULT ':' statement

  207 statement_expression: ';'
  208                     | expression ';'

  209 statement_condition: IF '(' expression ')' statement ELSE statement
  210                    | IF '(' expression ')' statement
  211                    | SWITCH '(' expression ')' statement

  212 statement_iteration: WHILE '(' expression ')' statement
  213                    | DO statement WHILE '(' expression ')' ';'
  214                    | FOR '(' statement_expression statement_expression ')' statement
  215                    | FOR '(' statement_expression statement_expression expression ')' statement
  216                    | FOR '(' declaration statement_expression ')' statement
  217                    | FOR '(' declaration statement_expression expression ')' statement

  218 statement_jump: GOTO IDENTIFIER ';'
  219               | CONTINUE ';'
  220               | BREAK ';'
  221               | RETURN ';'
  222               | RETURN expression ';'

  223 statement: labeled_statement
  224          | compound_statement
  225          | statement_expression
  226          | statement_condition
  227          | statement_iteration
  228          | statement_jump

  229 block_item_list: block_item
  230                | block_item_list block_item

  231 block_item: declaration
  232           | statement

  233 compound_statement: '{' '}'
  234                   | '{' block_item_list '}'

  235 type_qualifier: CONST
  236               | RESTRICT
  237               | VOLATILE
  238               | ATOMIC

  239 type_qualifier_list: type_qualifier
  240                    | type_qualifier_list type_qualifier

  241 pointer: '*' type_qualifier_list pointer
  242        | '*' type_qualifier_list
  243        | '*' pointer
  244        | '*'

  245 direct_abstract_declarator: '(' abstract_declarator ')'
  246                           | '[' ']'
  247                           | '[' '*' ']'
  248                           | '[' STATIC type_qualifier_list expression_assignment ']'
  249                           | '[' STATIC expression_assignment ']'
  250                           | '[' type_qualifier_list STATIC expression_assignment ']'
  251                           | '[' type_qualifier_list expression_assignment ']'
  252                           | '[' type_qualifier_list ']'
  253                           | '[' expression_assignment ']'
  254                           | direct_abstract_declarator '[' ']'
  255                           | direct_abstract_declarator '[' '*' ']'
  256                           | direct_abstract_declarator '[' STATIC type_qualifier_list expression_assignment ']'
  257                           | direct_abstract_declarator '[' STATIC expression_assignment ']'
  258                           | direct_abstract_declarator '[' type_qualifier_list expression_assignment ']'
  259                           | direct_abstract_declarator '[' type_qualifier_list STATIC expression_assignment ']'
  260                           | direct_abstract_declarator '[' type_qualifier_list ']'
  261                           | direct_abstract_declarator '[' expression_assignment ']'
  262                           | '(' ')'
  263                           | '(' parameter_type_list ')'
  264                           | direct_abstract_declarator '(' ')'
  265                           | direct_abstract_declarator '(' parameter_type_list ')'

  266 abstract_declarator: pointer direct_abstract_declarator
  267                    | pointer
  268                    | direct_abstract_declarator

  269 direct_declarator: IDENTIFIER
  270                  | '(' declarator ')'
  271                  | direct_declarator '[' ']'
  272                  | direct_declarator '[' '*' ']'
  273                  | direct_declarator '[' STATIC type_qualifier_list expression_assignment ']'
  274                  | direct_declarator '[' STATIC expression_assignment ']'
  275                  | direct_declarator '[' type_qualifier_list '*' ']'
  276                  | direct_declarator '[' type_qualifier_list STATIC expression_assignment ']'
  277                  | direct_declarator '[' type_qualifier_list expression_assignment ']'
  278                  | direct_declarator '[' type_qualifier_list ']'
  279                  | direct_declarator '[' expression_assignment ']'
  280                  | direct_declarator '(' parameter_type_list ')'
  281                  | direct_declarator '(' ')'
  282                  | direct_declarator '(' identifier_list ')'

  283 declarator_list: declarator
  284                | declarator_list ',' declarator

  285 declarator: pointer direct_declarator
  286           | direct_declarator

  287 declarator_initializer_list: declarator_initializer
  288                            | declarator_initializer_list ',' declarator_initializer

  289 declarator_initializer: declarator '=' initializer
  290                       | declarator

  291 declaration_specifiers: storage_class_specifier declaration_specifiers
  292                       | storage_class_specifier
  293                       | type_specifier declaration_specifiers
  294                       | type_specifier
  295                       | type_qualifier declaration_specifiers
  296                       | type_qualifier
  297                       | function_specifier declaration_specifiers
  298                       | function_specifier
  299                       | alignment_specifier declaration_specifiers
  300                       | alignment_specifier

  301 declaration: TYPEDEF declaration_specifiers declarator_list ';'
  302            | declaration_specifiers ';'
  303            | declaration_specifiers declarator_initializer_list ';'
  304            | static_assert_declaration

  305 declaration_list: declaration
  306                 | declaration_list declaration

  307 function_definition: declaration_specifiers declarator declaration_list compound_statement
  308                    | declaration_specifiers declarator compound_statement

  309 external_declaration: function_definition
  310                     | declaration
  311                     | preprocessor

  312 translation_unit: external_declaration
  313                 | translation_unit external_declaration


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 8 9 10 11 12
'!' (33) 70
'%' (37) 76
'&' (38) 65 92
'(' (40) 23 24 44 48 49 54 55 63 64 72 170 175 178 179 203 209 210
    211 212 213 214 215 216 217 245 262 263 264 265 270 280 281 282
')' (41) 23 24 44 48 49 54 55 63 64 72 170 175 178 179 203 209 210
    211 212 213 214 215 216 217 245 262 263 264 265 270 280 281 282
'*' (42) 66 74 241 242 243 244 247 255 272 275
'+' (43) 67 78
',' (44) 26 55 57 117 154 162 164 167 170 172 180 183 188 193 194 196
    203 284 288
'-' (45) 68 79
'.' (46) 50 202
'/' (47) 75
':' (58) 102 155 156 173 174 204 205 206
';' (59) 150 151 203 207 208 213 218 219 220 221 222 301 302 303
'=' (61) 105 168 198 289
'?' (63) 102
'[' (91) 47 201 246 247 248 249 250 251 252 253 254 255 256 257 258
    259 260 261 271 272 273 274 275 276 277 278 279
']' (93) 47 201 246 247 248 249 250 251 252 253 254 255 256 257 258
    259 260 261 271 272 273 274 275 276 277 278 279
'^' (94) 94
'{' (123) 54 55 145 146 158 159 161 162 163 164 195 196 233 234
'|' (124) 96
'}' (125) 54 55 145 146 158 159 161 162 163 164 195 196 233 234
'~' (126) 69
error (256)
PP (258) 8 9 10 11 12
PP_SPACE (259) 17 18 19 20 21 22 23 24 29 30 32 33 34 35
PP_NEWLINE (260)
PP_CONTENT (261) 7
PP_STRING (262) 6 27 29 34
PP_IF (263) 13
PP_ELIF (264) 14
PP_ELSE (265) 15
PP_ENDIF (266) 16
PP_IFDEF (267) 17
PP_IFNDEF (268) 18
PP_UNDEF (269) 19
PP_DEFINE (270) 20 21 22 23 24
PP_ERROR (271)
PP_WARNING (272)
PP_INCLUDE (273) 27 28 29 30
PP_PRAGMA (274)
PP_LINE (275) 31 32 33 34 35
IDENTIFIER (276) 17 18 19 20 21 22 23 24 25 26 41 50 51 146 147 159
    160 163 164 165 168 169 187 188 202 204 218 269
LITERAL_INT (277) 1 36
LITERAL_FLOAT (278) 2 38
LITERAL_CHAR (279) 3 37
LITERAL_STRING (280) 4 28 30 35 40 203
LITERAL_ENUM (281) 5 39
NAME_MACRO (282)
NAME_TYPEDEF (283) 140
NAME_STRUCT (284)
NAME_UNION (285)
NAME_ENUM (286)
IF (287) 209 210
ELSE (288) 209
WHILE (289) 212 213
DO (290) 213
FOR (291) 214 215 216 217
RETURN (292) 221 222
GOTO (293) 218
CONTINUE (294) 219
BREAK (295) 220
SWITCH (296) 211
CASE (297) 205
DEFAULT (298) 174 206
SIZEOF (299) 62 63
ALIGNOF (300) 64
OP_PTR (301) 51
OP_INC (302) 52 59
OP_DEC (303) 53 60
OP_BITLEFT (304) 81
OP_BITRIGHT (305) 82
OP_AND (306) 98
OP_OR (307) 100
OP_LT (308) 84
OP_GT (309) 85
OP_LTE (310) 86
OP_GTE (311) 87
OP_EQ (312) 89
OP_NEQ (313) 90
OP_ASSIGN_MUL (314) 106
OP_ASSIGN_DIV (315) 107
OP_ASSIGN_MOD (316) 108
OP_ASSIGN_ADD (317) 109
OP_ASSIGN_SUB (318) 110
OP_ASSIGN_BITLEFT (319) 111
OP_ASSIGN_BITRIGHT (320) 112
OP_ASSIGN_BITAND (321) 113
OP_ASSIGN_BITXOR (322) 114
OP_ASSIGN_BITOR (323) 115
TYPEDEF (324) 301
EXTERN (325) 119
STATIC (326) 120 248 249 250 256 257 259 273 274 276
AUTO (327) 122
REGISTER (328) 123
INLINE (329) 176
CONST (330) 235
RESTRICT (331) 236
VOLATILE (332) 237
SIGNED (333) 131
UNSIGNED (334) 132
VOID (335) 124
BOOL (336) 133
CHAR (337) 125
SHORT (338) 126
INT (339) 127
LONG (340) 128
FLOAT (341) 129
DOUBLE (342) 130
COMPLEX (343) 134
IMAGINARY (344) 135
STRUCT (345) 145 146 147
UNION (346) 158 159 160
ENUM (347) 161 162 163 164 165
ELLIPSIS (348) 180
ATOMIC (349) 175 238
ALIGNAS (350) 178 179
NORETURN (351) 177
THREAD_LOCAL (352) 121
GENERIC (353) 170
STATIC_ASSERT (354) 203


Nonterminals, with rules where they appear

$accept (123)
    on left: 0
preprocessor_content (124)
    on left: 1 2 3 4 5 6 7, on right: 13 14 22 24
preprocessor_define (125)
    on left: 20 21 22 23 24, on right: 10
preprocessor_define_args (126)
    on left: 25 26, on right: 23 24 26
preprocessor (127)
    on left: 8 9 10 11 12, on right: 311
preprocessor_conditional (128)
    on left: 13 14 15 16 17 18, on right: 8
preprocessor_undefine (129)
    on left: 19, on right: 9
preprocessor_include (130)
    on left: 27 28 29 30, on right: 11
preprocessor_line (131)
    on left: 31 32 33 34 35, on right: 12
constant (132)
    on left: 36 37 38 39, on right: 33 34 35 42
string (133)
    on left: 40, on right: 43
expression_primary (134)
    on left: 41 42 43 44 45, on right: 46
expression_postfix (135)
    on left: 46 47 48 49 50 51 52 53 54 55, on right: 47 48 49 50 51
    52 53 58
argument_expression_list (136)
    on left: 56 57, on right: 49 57
expression_unary (137)
    on left: 58 59 60 61 62 63 64, on right: 59 60 62 71 104
unary_operator (138)
    on left: 65 66 67 68 69 70, on right: 61
expression_cast (139)
    on left: 71 72, on right: 61 72 73 74 75 76
expression_multiplicative (140)
    on left: 73 74 75 76, on right: 74 75 76 77 78 79
expression_additive (141)
    on left: 77 78 79, on right: 78 79 80 81 82
expression_shift (142)
    on left: 80 81 82, on right: 81 82 83 84 85 86 87
expression_relational (143)
    on left: 83 84 85 86 87, on right: 84 85 86 87 88 89 90
expression_equality (144)
    on left: 88 89 90, on right: 89 90 91 92
expression_bitwise_and (145)
    on left: 91 92, on right: 92 93 94
expression_bitwise_xor (146)
    on left: 93 94, on right: 94 95 96
expression_bitwise_or (147)
    on left: 95 96, on right: 96 97 98
expression_logical_and (148)
    on left: 97 98, on right: 98 99 100
expression_logical_or (149)
    on left: 99 100, on right: 100 101 102
expression_ternary (150)
    on left: 101 102, on right: 102 103 118
expression_assignment (151)
    on left: 103 104, on right: 56 57 104 116 117 170 173 174 197 248
    249 250 251 253 256 257 258 259 261 273 274 276 277 279
assignment_operator (152)
    on left: 105 106 107 108 109 110 111 112 113 114 115,
    on right: 104
expression (153)
    on left: 116 117, on right: 44 47 102 117 208 209 210 211 212 213
    215 217 222
expression_constant (154)
    on left: 118, on right: 155 156 168 179 201 203 205
storage_class_specifier (155)
    on left: 119 120 121 122 123, on right: 291 292
type_specifier (156)
    on left: 124 125 126 127 128 129 130 131 132 133 134 135 136 137
    138 139 140, on right: 141 142 293 294
specifier_qualifier_list (157)
    on left: 141 142 143 144, on right: 141 143 150 151 189 190
struct_specifier (158)
    on left: 145 146 147, on right: 137
struct_declaration_list (159)
    on left: 148 149, on right: 145 146 149 158 159
struct_declaration (160)
    on left: 150 151 152, on right: 148 149
struct_declarator_list (161)
    on left: 153 154, on right: 151 154
struct_declarator (162)
    on left: 155 156 157, on right: 153 154
union_specifier (163)
    on left: 158 159 160, on right: 138
enum_specifier (164)
    on left: 161 162 163 164 165, on right: 139
enumerator_list (165)
    on left: 166 167, on right: 161 162 163 164 167
enumerator (166)
    on left: 168 169, on right: 166 167
generic_selection (167)
    on left: 170, on right: 45
generic_assoc_list (168)
    on left: 171 172, on right: 170 172
generic_association (169)
    on left: 173 174, on right: 171 172
atomic_type_specifier (170)
    on left: 175, on right: 136
function_specifier (171)
    on left: 176 177, on right: 297 298
alignment_specifier (172)
    on left: 178 179, on right: 299 300
parameter_type_list (173)
    on left: 180 181, on right: 263 265 280
parameter_list (174)
    on left: 182 183, on right: 180 181 183
parameter_declaration (175)
    on left: 184 185 186, on right: 182 183
identifier_list (176)
    on left: 187 188, on right: 188 282
type_name (177)
    on left: 189 190, on right: 54 55 63 64 72 173 175 178
initializer_list (178)
    on left: 191 192 193 194, on right: 54 55 193 194 195 196
initializer (179)
    on left: 195 196 197, on right: 191 192 193 194 289
designation (180)
    on left: 198, on right: 191 193
designator_list (181)
    on left: 199 200, on right: 198 200
designator (182)
    on left: 201 202, on right: 199 200
static_assert_declaration (183)
    on left: 203, on right: 152 304
labeled_statement (184)
    on left: 204 205 206, on right: 223
statement_expression (185)
    on left: 207 208, on right: 214 215 216 217 225
statement_condition (186)
    on left: 209 210 211, on right: 226
statement_iteration (187)
    on left: 212 213 214 215 216 217, on right: 227
statement_jump (188)
    on left: 218 219 220 221 222, on right: 228
statement (189)
    on left: 223 224 225 226 227 228, on right: 204 205 206 209 210
    211 212 213 214 215 216 217 232
block_item_list (190)
    on left: 229 230, on right: 230 234
block_item (191)
    on left: 231 232, on right: 229 230
compound_statement (192)
    on left: 233 234, on right: 224 307 308
type_qualifier (193)
    on left: 235 236 237 238, on right: 143 144 239 240 295 296
type_qualifier_list (194)
    on left: 239 240, on right: 240 241 242 248 250 251 252 256 258
    259 260 273 275 276 277 278
pointer (195)
    on left: 241 242 243 244, on right: 241 243 266 267 285
direct_abstract_declarator (196)
    on left: 245 246 247 248 249 250 251 252 253 254 255 256 257 258
    259 260 261 262 263 264 265, on right: 254 255 256 257 258 259
    260 261 264 265 266 268
abstract_declarator (197)
    on left: 266 267 268, on right: 185 189 245
direct_declarator (198)
    on left: 269 270 271 272 273 274 275 276 277 278 279 280 281 282
   , on right: 271 272 273 274 275 276 277 278 279 280 281 282 285
    286
declarator_list (199)
    on left: 283 284, on right: 284 301
declarator (200)
    on left: 285 286, on right: 156 157 184 270 283 284 289 290 307
    308
declarator_initializer_list (201)
    on left: 287 288, on right: 288 303
declarator_initializer (202)
    on left: 289 290, on right: 287 288
declaration_specifiers (203)
    on left: 291 292 293 294 295 296 297 298 299 300,
    on right: 184 185 186 291 293 295 297 299 301 302 303 307 308
declaration (204)
    on left: 301 302 303 304, on right: 216 217 231 305 306 310
declaration_list (205)
    on left: 305 306, on right: 306 307
function_definition (206)
    on left: 307 308, on right: 309
external_declaration (207)
    on left: 309 310 311, on right: 312 313
translation_unit (208)
    on left: 312 313, on right: 0 313


state 0

    0 $accept: . translation_unit $end

    PP             shift, and go to state 1
    NAME_TYPEDEF   shift, and go to state 2
    TYPEDEF        shift, and go to state 3
    EXTERN         shift, and go to state 4
    STATIC         shift, and go to state 5
    AUTO           shift, and go to state 6
    REGISTER       shift, and go to state 7
    INLINE         shift, and go to state 8
    CONST          shift, and go to state 9
    RESTRICT       shift, and go to state 10
    VOLATILE       shift, and go to state 11
    SIGNED         shift, and go to state 12
    UNSIGNED       shift, and go to state 13
    VOID           shift, and go to state 14
    BOOL           shift, and go to state 15
    CHAR           shift, and go to state 16
    SHORT          shift, and go to state 17
    INT            shift, and go to state 18
    LONG           shift, and go to state 19
    FLOAT          shift, and go to state 20
    DOUBLE         shift, and go to state 21
    COMPLEX        shift, and go to state 22
    IMAGINARY      shift, and go to state 23
    STRUCT         shift, and go to state 24
    UNION          shift, and go to state 25
    ENUM           shift, and go to state 26
    ATOMIC         shift, and go to state 27
    ALIGNAS        shift, and go to state 28
    NORETURN       shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30
    STATIC_ASSERT  shift, and go to state 31

    preprocessor               go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_specifier           go to state 35
    union_specifier            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    function_specifier         go to state 39
    alignment_specifier        go to state 40
    static_assert_declaration  go to state 41
    type_qualifier             go to state 42
    declaration_specifiers     go to state 43
    declaration                go to state 44
    function_definition        go to state 45
    external_declaration       go to state 46
    translation_unit           go to state 47


state 1

    8 preprocessor: PP . preprocessor_conditional '\n'
    9             | PP . preprocessor_undefine '\n'
   10             | PP . preprocessor_define '\n'
   11             | PP . preprocessor_include '\n'
   12             | PP . preprocessor_line '\n'

    PP_IF       shift, and go to state 48
    PP_ELIF     shift, and go to state 49
    PP_ELSE     shift, and go to state 50
    PP_ENDIF    shift, and go to state 51
    PP_IFDEF    shift, and go to state 52
    PP_IFNDEF   shift, and go to state 53
    PP_UNDEF    shift, and go to state 54
    PP_DEFINE   shift, and go to state 55
    PP_INCLUDE  shift, and go to state 56
    PP_LINE     shift, and go to state 57

    preprocessor_define       go to state 58
    preprocessor_conditional  go to state 59
    preprocessor_undefine     go to state 60
    preprocessor_include      go to state 61
    preprocessor_line         go to state 62


state 2

  140 type_specifier: NAME_TYPEDEF .

    $default  reduce using rule 140 (type_specifier)


state 3

  301 declaration: TYPEDEF . declaration_specifiers declarator_list ';'

    NAME_TYPEDEF  shift, and go to state 2
    EXTERN        shift, and go to state 4
    STATIC        shift, and go to state 5
    AUTO          shift, and go to state 6
    REGISTER      shift, and go to state 7
    INLINE        shift, and go to state 8
    CONST         shift, and go to state 9
    RESTRICT      shift, and go to state 10
    VOLATILE      shift, and go to state 11
    SIGNED        shift, and go to state 12
    UNSIGNED      shift, and go to state 13
    VOID          shift, and go to state 14
    BOOL          shift, and go to state 15
    CHAR          shift, and go to state 16
    SHORT         shift, and go to state 17
    INT           shift, and go to state 18
    LONG          shift, and go to state 19
    FLOAT         shift, and go to state 20
    DOUBLE        shift, and go to state 21
    COMPLEX       shift, and go to state 22
    IMAGINARY     shift, and go to state 23
    STRUCT        shift, and go to state 24
    UNION         shift, and go to state 25
    ENUM          shift, and go to state 26
    ATOMIC        shift, and go to state 27
    ALIGNAS       shift, and go to state 28
    NORETURN      shift, and go to state 29
    THREAD_LOCAL  shift, and go to state 30

    storage_class_specifier  go to state 33
    type_specifier           go to state 34
    struct_specifier         go to state 35
    union_specifier          go to state 36
    enum_specifier           go to state 37
    atomic_type_specifier    go to state 38
    function_specifier       go to state 39
    alignment_specifier      go to state 40
    type_qualifier           go to state 42
    declaration_specifiers   go to state 63


state 4

  119 storage_class_specifier: EXTERN .

    $default  reduce using rule 119 (storage_class_specifier)


state 5

  120 storage_class_specifier: STATIC .

    $default  reduce using rule 120 (storage_class_specifier)


state 6

  122 storage_class_specifier: AUTO .

    $default  reduce using rule 122 (storage_class_specifier)


state 7

  123 storage_class_specifier: REGISTER .

    $default  reduce using rule 123 (storage_class_specifier)


state 8

  176 function_specifier: INLINE .

    $default  reduce using rule 176 (function_specifier)


state 9

  235 type_qualifier: CONST .

    $default  reduce using rule 235 (type_qualifier)


state 10

  236 type_qualifier: RESTRICT .

    $default  reduce using rule 236 (type_qualifier)


state 11

  237 type_qualifier: VOLATILE .

    $default  reduce using rule 237 (type_qualifier)


state 12

  131 type_specifier: SIGNED .

    $default  reduce using rule 131 (type_specifier)


state 13

  132 type_specifier: UNSIGNED .

    $default  reduce using rule 132 (type_specifier)


state 14

  124 type_specifier: VOID .

    $default  reduce using rule 124 (type_specifier)


state 15

  133 type_specifier: BOOL .

    $default  reduce using rule 133 (type_specifier)


state 16

  125 type_specifier: CHAR .

    $default  reduce using rule 125 (type_specifier)


state 17

  126 type_specifier: SHORT .

    $default  reduce using rule 126 (type_specifier)


state 18

  127 type_specifier: INT .

    $default  reduce using rule 127 (type_specifier)


state 19

  128 type_specifier: LONG .

    $default  reduce using rule 128 (type_specifier)


state 20

  129 type_specifier: FLOAT .

    $default  reduce using rule 129 (type_specifier)


state 21

  130 type_specifier: DOUBLE .

    $default  reduce using rule 130 (type_specifier)


state 22

  134 type_specifier: COMPLEX .

    $default  reduce using rule 134 (type_specifier)


state 23

  135 type_specifier: IMAGINARY .

    $default  reduce using rule 135 (type_specifier)


state 24

  145 struct_specifier: STRUCT . '{' struct_declaration_list '}'
  146                 | STRUCT . IDENTIFIER '{' struct_declaration_list '}'
  147                 | STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 64
    '{'         shift, and go to state 65


state 25

  158 union_specifier: UNION . '{' struct_declaration_list '}'
  159                | UNION . IDENTIFIER '{' struct_declaration_list '}'
  160                | UNION . IDENTIFIER

    IDENTIFIER  shift, and go to state 66
    '{'         shift, and go to state 67


state 26

  161 enum_specifier: ENUM . '{' enumerator_list '}'
  162               | ENUM . '{' enumerator_list ',' '}'
  163               | ENUM . IDENTIFIER '{' enumerator_list '}'
  164               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  165               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 68
    '{'         shift, and go to state 69


state 27

  175 atomic_type_specifier: ATOMIC . '(' type_name ')'
  238 type_qualifier: ATOMIC .

    '('  shift, and go to state 70

    '('       [reduce using rule 238 (type_qualifier)]
    $default  reduce using rule 238 (type_qualifier)


state 28

  178 alignment_specifier: ALIGNAS . '(' type_name ')'
  179                    | ALIGNAS . '(' expression_constant ')'

    '('  shift, and go to state 71


state 29

  177 function_specifier: NORETURN .

    $default  reduce using rule 177 (function_specifier)


state 30

  121 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 121 (storage_class_specifier)


state 31

  203 static_assert_declaration: STATIC_ASSERT . '(' expression_constant ',' LITERAL_STRING ')' ';'

    '('  shift, and go to state 72


state 32

  311 external_declaration: preprocessor .

    $default  reduce using rule 311 (external_declaration)


state 33

  291 declaration_specifiers: storage_class_specifier . declaration_specifiers
  292                       | storage_class_specifier .
